Swap links and location in narrow layout, to fix alignment.

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -122,13 +122,13 @@ tr.details td {
     grid:
       "dates price"
       "name type"
-      "location links"
+      "links location"
       "styles styles"
       / auto auto;
   }
   .event-price,
   .event-type,
-  .event-links {
+  .event-location {
     justify-self: end;
   }
 }
